# FEM

./: CMakeLists.txt  PROJECT1.sln  PROJECT1.vcxproj  PROJECT1.vcxproj.filters  README.md  element_beam.cpp  element_beam.h  main.cpp  test.cpp
FEM_Front/: CMakeLists.txt  README.md  glviewer.cpp  glviewer.h  main.cpp  scene.cpp  scene.h  window.cpp  window.h
FEM_Front/include/: Model_Input_Processing.h  function.h  types.h
FEM_Front/shader/: facet.fs  facet.gs  facet.vs  facet_color.fs  facet_color.gs  facet_color.vs  func.fs  func.vs  point.fs  point.vs
FEM_Front/src/: Model_Input_Processing.cpp
FEM_Front/ui/: cad2mesh.ui
application/solid_mechanics/include/: lotus_solid_mechanics_application.h  lotus_solid_mechanics_variables.h
application/solid_mechanics/include/solid_mechanics_condition/: boundary_condition.h  load_condition.h  point_load_condition.h
application/solid_mechanics/include/solid_mechanics_constitutive_law/: hyperelastic_3D_law.h  linear_elastic_3D_law.h
application/solid_mechanics/include/solid_mechanics_element/: solid_element.h
application/solid_mechanics/source/: lotus_solid_mechanics_application.cpp  lotus_solid_mechanics_variables.cpp
application/solid_mechanics/source/solid_mechanics_condition/: boundary_condition.cpp  load_condition.cpp  point_load_condition.cpp
application/solid_mechanics/source/solid_mechanics_constitutive_law/: hyperelastic_3D_law.cpp  linear_elastic_3D_law.cpp
application/solid_mechanics/source/solid_mechanics_element/: small_displacement_element.cpp  solid_element.cpp
example/: Constrain.txt  Element.txt  Force.txt  Node.txt
include/: Geometry.h  Geometry_Data.h  Point.h  Vector.cpp  Vector.h  abstract_base_element.h  components.h  condition.h  constrain.h  define.h  dof.h  ele_tri.h  element.h  element_beam.h  fnv_1a_hash.h  force.h  indexed_object.h  key_hash.h  lotus_application.h  lotus_components.h  lotus_kernel.h  lotus_version.h  mesh.h  node.h  node.hpp  node_data.h  process_info.h  properties.h  solver.h
include/Condition/: boundary_condition.h  condition.h  mesh_condition.h  point_load_condition.h
include/Constitutive_Law/: Constitutive_law.h  initial_state.h
include/Container/: data_value_container.h  flags.h  geometry_container.h  lotus_flags.h  pointer_hash_map_set.h  pointer_vector.h  pointer_vector_map.h  pointer_vector_map_iterator.h  pointer_vector_set.h  points_container.h  set_identity_function.h
include/Element/: beam_element.h  element.h  mesh_element.h  shell_element_3d_4n.h  small_displacement_element.h  solid_element.h
include/Geometry/: Lotus_Vector.h  Point.h  Vector.h  geometry.h  geometry_data.h  geometry_dimension.h  geometry_object.h  geometry_shape_function_container.h  hexahedron.h  line.h  point3d.h  quadrangle.h  quadrilateral.h  quadrilateral_2d_4.h  quadrilateral_3d_4.h  register_lotus_components_for_geometry.h  tetrahedron.h  triangle.h
include/Linear_Solver/: dense_space.h  linear_solver.h  sparse_space.h
include/Model/: model.h  model_part.h
include/Node/: dof.h  node.h  node_data.h
include/Process/: process.h  solver_process.h
include/Property/: accessor.h  properties.h  table.h
include/Quadrature/: README.md  hexahedron_gauss_legendre_integration_points.h  integration_point.h  line_gauss_legendre_integration_points.h  quadrature.h  quadrilateral_gauss_legendre_integration_points.h
include/Registry/: registry.h  registry_item.h
include/Solve_Strategy/: solve_local_flags.h
include/Solve_Strategy/builder_and_solver/: block_builder_and_solver.h  builder_and_solver.h  residualbased_elimination_buildef_and_solver.h  residualbased_elimination_builder_and_solver.h  solution_builder_and_solver.hpp
include/Solve_Strategy/convergencecriterias/: convergencecriterias.h  displacement_convergencecriterias.h
include/Solve_Strategy/schemes/: scheme.h  solution_scheme.h  static_scheme.h
include/Solve_Strategy/strategies/: adaptive_residualbased_newton_raphson_strategy.h  implicit_solving_strategy.h  linear_solving_strategy.h  solution_strategy.h  solve_strategy.h
include/Solve_Strategy/time_integration_methods/: static_method.h  time_integration_method.h  time_integration_methods_container.h
include/Utility/: element_utility.h  math_utility.h  smart_pointer.h  string_utilities.h
include/Variable/: variable.h  variable_data.h  variable_list_data_value_container.h  variables.h  variables_list.h  variables_list_data_value_container.h
pic/: solve.pptx
src/: abstract_base_element.cpp  components.cpp  constrain.cpp  element.cpp  element_beam.cpp  force.cpp  lotus_application.cpp  lotus_components.cpp  lotus_kernel.cpp  lotus_version.cpp  node.cpp  node_data.cpp  nodesrc.cpp  process_info.cpp  solver.cpp
src/Condition/: boundary_condition.cpp  load_condition.cpp  mesh_condition.cpp  point_load_condition.cpp
src/Constitutive_Law/: constitutive_law.cpp  initial_state.cpp
src/Container/: data_value_container.cpp  flags.cpp
src/Element/: mesh_element.cpp  small_displacement_element.cpp  solid_element.cpp
src/Geometry/: geometry_object.cpp
src/Node/: node_data.cpp
src/Property/: accessor.cpp
src/Registry/: registry.cpp  registry_item.cpp
src/Solve_Strategy/: solve_local_flags.cpp
src/Variable/: variable.cpp  variable_date.cpp  variables.cpp
src/model/: model.cpp  model_part.cpp
test/: CMakeLists.txt  test.cpp
test/complete_test/: CMakeLists.txt  Complete_Soft_Test.cpp
test/geometry_test/: CMakeLists.txt  test.cpp
test/graphics/: CMakeLists.txt
test/model_test/: CMakeLists.txt  test.cpp
test/solver_test/: CMakeLists.txt  test.cpp
