CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(FEM)
SET(CMAKE_CXX_STANDARD 11)
INCLUDE_DIRECTORIES(./include)

# GENERATE EXECUTION FILE
# ADD_EXECUTABLE(main src/main.cpp)

# GENERATE STATIC LIBRARY
# LINK_DIRECTORIES(./build)
# ADD_LIBRARY(BasicFun STATIC src/BasicFun.cpp)
# ADD_EXECUTABLE(main src/main.cpp)
# TARGET_LINK_LIBRARIES(main libBasicFun.a)

# GENERATE SHARED LIBRARY
# ADD_LIBRARY(BasicFun SHARED src/BasicFun.cpp)
# LINK_DIRECTORIES(./build)
ADD_EXECUTABLE(main main.cpp src/element_beam.cpp)
# TARGET_LINK_LIBRARIES(main libBasicFun.so)
