CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(LOTUS)
SET(PROJECT_NAME LOTUS)
SET(CMAKE_CXX_STANDARD 17)

# INCLUDE_DIRECTORIES(
#     include
#     ${SUB_INCLUDE_DIR} # SUB_INCLUDE_DIR IS A VARIABLE THAT BEEN SET IN SUB CMAKELISTS.TXT
# )

# # AUX_SOURCE_DIRECTORY(.          SRC_LIST)  # "." means current work directory
# AUX_SOURCE_DIRECTORY(src        SRC_LIST) 

# ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

# # TARGET_LINK_LIBRARIES(${PROJECT_NAME}
# #     lib
# # )

# ADD_SUBDIRECTORY(test)

INCLUDE_DIRECTORIES(include)
SET(SRC_LIST test/test.cpp)
AUX_SOURCE_DIRECTORY(src SRC_LIST)

MESSAGE(STATUS "SRC_LIST:${SRC_LIST}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})