CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(LOTUS)
SET(PROJECT_NAME LOTUS)
SET(CMAKE_CXX_STANDARD 17)

ADD_SUBDIRECTORY(test)
# INCLUDE_DIRECTORIES(include)
# SET(SRC_LIST test/test.cpp)
# AUX_SOURCE_DIRECTORY(src SRC_LIST)

# MESSAGE(STATUS "SRC_LIST:${SRC_LIST}")

# ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})