PROJECT(TEST)

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    MESSAGE(STATUS "Configure on/for Linux")
    INCLUDE_DIRECTORIES(/usr/local/include/eigen3 /usr/include/eigen3)
ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "Windows")
    MESSAGE(STATUS "Configure on/for Windows")
    SET(BOOST_ROOT "D:\\Boost\\boost_1_83_0")
    SET(Boost_USE_STATIC_LIBS ON)
    SET(Boost_USE_MULTITHREADED ON)
    FIND_PACKAGE(Boost REQUIRED)
ENDIF()

IF(${Boost_FOUND})
    MESSAGE(STATUS "BOOST FOUND!")
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF()

IF(${BOOST_FOUND})
    MESSAGE(STATUS "BOOST FOUND!")
ENDIF()

ADD_SUBDIRECTORY(geometry_test)
ADD_SUBDIRECTORY(model_test)
ADD_SUBDIRECTORY(solver_test)
ADD_SUBDIRECTORY(complete_test)


