PROJECT(COMPLETE_SOFT_TEST)

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    MESSAGE(STATUS ${PROJECT_NAME} "CONFIGURE ON LINUX----SET EIGEN DIRECTORIES")
    INCLUDE_DIRECTORIES(/usr/local/include/eigen3 /usr/include/eigen3)
ELSE(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    MESSAGE(STATUS ${PROJECT_NAME} "CONFIGURE ON WINDOS----SET EIGEN DIRECTORIES")
ENDIF()

FILE(GLOB_RECURSE SRC_DIR_LIST "../../src/*.cpp" "../../src/*.c" "*.cpp")	#遍历获取source/路径下所有的*.cpp和*.c文件列表

MESSAGE(STATUS "SRC_DIR_LIST = ${SRC_DIR_LIST}")	

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_DIR_LIST})

