PROJECT(COMPLETE_SOFT_TEST)

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    MESSAGE(STATUS ${PROJECT_NAME} "CONFIGURE ON LINUX----SET EIGEN DIRECTORIES")
    INCLUDE_DIRECTORIES(/usr/local/include/eigen3 /usr/include/eigen3)
ELSE(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    MESSAGE(STATUS ${PROJECT_NAME} "CONFIGURE ON WINDOS----SET EIGEN DIRECTORIES")
    SET(BOOST_ROOT "D:\\Boost\\boost_1_83_0")
    SET(Boost_USE_STATIC_LIBS ON)
    SET(Boost_USE_MULTITHREADED ON)
    FIND_PACKAGE(Boost REQUIRED)
ENDIF()

FIND_PACKAGE(eigen3 REQUIRED)

SET(CMAKE_CXX_STANDARD 20)
FILE(
    GLOB_RECURSE SRC_DIR_LIST 
    "../../src/*.cpp" "../../src/*.c" "*.cpp" "../../application/*.cpp" "../../application/*.c"
)	#遍历获取source/路径下所有的*.cpp和*.c文件列表

IF(${Boost_FOUND})
    MESSAGE(STATUS "BOOST FOUND!")
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF()

FIND_PACKAGE(Threads REQUIRED)
IF(${Threads_FOUND})
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -pthread)
    MESSAGE(STATUS "Threads PACKAGE FOUNDED")
ENDIF()

FIND_PACKAGE(Boost REQUIRED)
IF(${Boost_FOUND})
    SET(CMAKE_CXX_FLAG ${CMAKE_CXX_FLAGS} -lboost)
    MESSAGE(STATUS "Boost PACKAGE FOUNDED")
ENDIF()

FIND_PACKAGE(OpenMP REQUIRED)
IF(${OpenMP_FOUND})
    MESSAGE(STATUS "OpenMP FOUND!")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET(CMAKE_CXX_FLAG "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}" )
    INCLUDE_DIRECTORIES(${OpenMP_INCLUDE_DIRS})
ENDIF()

FIND_PATH(EIGEN3_INCLUDE_DIRS "Eigen")

MESSAGE(STATUS "SRC_DIR_LIST = ${SRC_DIR_LIST}")	

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_DIR_LIST})
target_include_directories(${PROJECT_NAME} PRIVATE ${EIGEN3_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE Threads::Threads)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX )
