PROJECT(GRAPHICS_TSET)

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    MESSAGE(STATUS "Configure on/for Linux")
    INCLUDE_DIRECTORIES(../../include /usr/include/eigen3)
ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "Windows")
    MESSAGE(STATUS "Configure on/for Windos")
    SET(BOOST_ROOT "D:\\Boost\\boost_1_83_0")
    SET(Boost_USE_STATIC_LIBS ON)
    SET(Boost_USE_MULTITHREADED ON)
    FIND_PACKAGE(Boost REQUIRED)
ENDIF()

INCLUDE_DIRECTORIES(../../dependency/include)
LINK_DIRECTORIES(../../dependency/lib)

IF(${Boost_FOUND})
    MESSAGE(STATUS "BOOST FOUND!")
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF()

FIND_PACKAGE(Threads REQUIRED)
IF(${Threads_FOUND})
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -pthread)
    MESSAGE(STATUS "Threads PACKAGE FOUNDED")
ENDIF()

FIND_PACKAGE(OpenGL REQUIRED)
IF(${OpenGL_FOUND})
    MESSAGE(STATUS "OpenGL FOUND!")
    INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS})
ELSE()
    MESSAGE(STATUS "OpenGL NOT FOUND!")
ENDIF()

FIND_PACKAGE(glfw3 REQUIRED)
IF(${glfw3_FOUND})
    MESSAGE(STATUS "glfw3 FOUND!")
    INCLUDE_DIRECTORIES(${glfw3_INCLUDE_DIRS})
ELSE()
    MESSAGE(STATUS "glfw3 NOT FOUND!")
ENDIF()

FIND_PACKAGE(X11 REQUIRED)
IF(${X11_FOUND})
    MESSAGE(STATUS "X11 FOUND!")
    INCLUDE_DIRECTORIES(${X11_INCLUDE_DIRS})
ELSE()
    MESSAGE(STATUS "X11 NOT FOUND!")
ENDIF()

FILE(GLOB_RECURSE SRC_DIR_LIST "../../src/*.cpp" "../../src/*.c" "*.cpp")	#遍历获取source/路径下所有的*.cpp和*.c文件列表

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_DIR_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE Threads::Threads)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE glfw X11)
